--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EngWordLockScreen">
-        <activity android:name=".LoadingActivity"
+        <activity android:name="com.example.engwordlockscreen.presentation.splash.components.LoadingActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,15 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".lockscreen.LockScreenActivity"
+        <activity android:name="com.example.engwordlockscreen.presentation.lockscreen.components.LockScreenActivity"
             android:permission="android.permission.SYSTEM_ALERT_WINDOW"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"
             android:taskAffinity="com.example.engwordlockscreen.lockscreen" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.engwordlockscreen.presentation.main.components.MainActivity">
         </activity>
-        <service android:name=".lockscreen.LockScreenService"
+        <service android:name="com.example.engwordlockscreen.presentation.lockscreen.LockScreenService"
             android:enabled="true"
             android:permission="android.permission.SYSTEM_ALERT_WINDOW"
             android:exported="false" /> // exported = 타 어플리케이션의 해당 서비스 호출 가능 여부
