--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EngWordLockScreen">
         <activity
+            android:exported="true"
             android:name="com.example.engwordlockscreen.presentation.splash.components.LoadingActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
