리팩토링 커밋
1. MultiChoiceFragment 작성 중
   - GridView 작성 완료
   - 데이터 정상적으로 받아오는 것 실험 완료 (StateIn Default Value 주지 않는 것으로 결정)
   - TODO :: ViewModel에서 정답과 정답 카운트 수를 Flow로 관리하며 Fragment에서는 최초 값 주입과 관찰을 실행할 수 있도록 구조
   - TODO :: GridView 꾸미기

2. 패키지 위치 수정 및 일부 코드 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:name=".WordApp"
@@ -28,13 +30,14 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"
-            android:taskAffinity="com.example.engwordlockscreen.lockscreen" />
+            android:taskAffinity="com.example.engwordlockscreen.lockscreen"
+            android:screenOrientation="portrait"/>
         <activity android:name="com.example.engwordlockscreen.presentation.main.components.MainActivity">
         </activity>
-        <service android:name="com.example.engwordlockscreen.presentation.lockscreen.LockScreenService"
+        <service android:name="com.example.engwordlockscreen.presentation.lockscreen.components.LockScreenService"
             android:enabled="true"
             android:permission="android.permission.SYSTEM_ALERT_WINDOW"
-            android:exported="false" /> // exported = 타 어플리케이션의 해당 서비스 호출 가능 여부
+            android:exported="false" />
 
     </application>
 
