리팩토링 커밋
1. WordSearchFragment 변화 및 예제 작성 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.EngWordLockScreen">
         <activity
             android:exported="true"
-            android:name="com.example.engwordlockscreen.presentation.splash.components.LoadingActivity"
+            android:name="com.example.engwordlockscreen.presentation.main.components.LoadingActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
